src/test/deca/syntax/valid/test_dir/added/lexer/strange_identifier.deca
// Description:
//    test of identifier
//
// Results:
//    test_lex --> no error, return 4 tokens
//
// History:
//    created on 04/01/2022

_iamenidentifier

metooooooo24

andmetoo_$

me8too