src/test/deca/syntax/invalid/test_dir/added/lexer/bad_letter.deca
// Description:
//    test of unexpected char (é)
//
// Results:
//    test_lex --> error line 12
//
// History:
//    created on 04/01/2022

"metoor"

"butnotmeé"